--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,8 @@
             <dependency>
                 <groupId>com.github.scribejava</groupId>
                 <artifactId>scribejava-apis</artifactId>
-                <version>6.9.0</version>
+<!--                <version>6.9.0</version>-->
+                <version>2.5.3</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
